package simplenessfactory;

public class GirlClothes extends Clothes {
    @Override
    public void type() {
        System.out.println("女装");
    }
}
