package simplenessfactory;

/**
 * 男装
 */
public class ManClothes extends Clothes{
    @Override
    public void type() {
        System.out.println("男装");
    }
}
